prevent the big buttons on small screens

--- a/src/components/Board/Output/SymbolOutput/SymbolOutput.css
+++ b/src/components/Board/Output/SymbolOutput/SymbolOutput.css
@@ -48,7 +48,7 @@
 .SymbolOutput__right__btns {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   height: 100%;
   overflow: visible;
   justify-content: center;
@@ -56,7 +56,7 @@
 
 .SymbolOutput__right__btns__lg {
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   width: auto;
   height: 100%;
   justify-content: center;
@@ -65,14 +65,6 @@
 
 .SymbolOutput__right__btns .MuiFormControlLabel-label {
   font-size: 11px;
-}
-
-label.Live__switch_lg {
-  height: 95%;
-  width: 100px;
-  justify-content: center;
-  margin-left: 0px;
-  margin-right: 15px;
 }
 
 .Output__button__sm {
@@ -96,4 +88,39 @@ svg.Output__icon__sm {
 svg.Output__icon__lg {
   height: 50px;
   width: 50px;
+}
+
+/* Prevent the big buttons on small screens */
+
+@media (min-width: 480px) {
+  label.Live__switch_lg {
+    height: 95%;
+    width: 100px;
+    justify-content: center;
+    margin-left: 0px;
+    margin-right: 15px;
+  }
+}
+
+@media (max-width: 480px) {
+  .SymbolOutput__right__btns__lg {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: n;
+    height: 100%;
+    overflow: visible;
+    justify-content: center;
+  }
+
+  button.Output__button__lg {
+    align-self: center;
+    height: 64px;
+    width: 64px;
+    margin-right: unset;
+  }
+
+  svg.Output__icon__lg {
+    height: 32px;
+    width: 32px;
+  }
 }
